# imgmath

./: .gitignore  Cargo.toml  Makefile  README.md  imgmath.h  main  main.c
src/: lib.rs  main.rs
src/shaders/: blue_light_filter.rs  mod.rs
